Updating the Final Project repositary